Chore:  switch to rem unit

--- a/src/styles/modules/_fonts.scss
+++ b/src/styles/modules/_fonts.scss
@@ -1,6 +1,6 @@
-$font-weight-700: 700;
-$font-size-15: 15px;
+$font-weight__700: 700;
+$font-size__15px: 0.9375rem;
 
-$font-family-primary: Clash Display;
-$font-family-secondary: Montserrat;
-$font-family-tertiary: Unica One;
+$font-family__primary: Clash Display;
+$font-family__secondary: Montserrat;
+$font-family__tertiary: Unica One;
