--- a/src/styles/modules/_layout.scss
+++ b/src/styles/modules/_layout.scss
@@ -1,24 +1,34 @@
 @use "./colors" as *;
 @use "./mixins" as *;
+@use "./variables" as *;
 
 .root-container {
+  background-color: $dark-purple;
   width: 100%;
   height: 100vh;
-  background-color: $dark-purple;
 }
 
 /** *************** Nav bar Layout ********** ***/
 
 .nav-container {
-  border-bottom: 1px solid $nav-border-color;
+  border-bottom: $unit-1px solid $nav-border-color;
   @include extendable-flex-container();
   background-color: inherit;
   width: inherit;
-  height: 69px;
+  height: $unit-69px;
 
   &__child {
     @include extendable-flex-container($justify-content: space-between);
     height: inherit;
-    width: 300px;
+    width: $unit-300px;
   }
+}
+
+/** ******************** Hero Section ******************** **/
+
+.hero-container {
+  // width: $unit-327px;
+  // height: $unit-442px;
+  // background-color: red;
+  // flex-shrink: 0;
 }
